k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ztf-orchestrator
  namespace: ztf-orchestrator
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 5001
      targetPort: http
  selector:
    app: ztf-orchestrator
